@@ -54,8 +54,13 @@ public record QuestionDraft(String courseCode,
 
     /** Defensive copies in, so neither the list nor the array this record holds is the caller's. */
     public QuestionDraft {
-        // List.copyOf yields an immutable, Serializable list - safe on the wire.
-        answers = answers == null ? List.of() : List.copyOf(answers);
+        // NOT List.copyOf: that throws on a null ELEMENT, and this constructor runs on the
+        // server's socket read thread during deserialization, where any throw kills the
+        // connection (E1.11, found by Member A 2026-08-21). A null element must survive
+        // construction so QuestionValidator can refuse it with a named VALIDATION sentence
+        // instead of the teacher losing her work to a silent disconnect.
+        answers = answers == null ? List.of()
+                : java.util.Collections.unmodifiableList(new java.util.ArrayList<>(answers));
         image = image == null ? null : image.clone();
     }
 
